# FloriBot4.0_ROS2_Base

./: .gitignore  README.md
src/base/: CMakeLists.txt  package.xml
src/base/include/base/: kinematics_calculator.h  kinematics_node.h
src/base/include/base_node/: base_publisher.hpp
src/base/include/drives/: articulated_drive.hpp
src/base/launch/: base_node.launch.py
src/base/params/: kinematics_params.yaml
src/base/src/base_node/: base_node.cpp  base_publisher.cpp
src/base/src/drives/: articulated_drive.cpp
src/base/src/nodes/: hardware_node.cpp
src/plc_connection/: CMakeLists.txt
src/plc_connection/launch/: plc_connection_launch.py
src/plc_connection/src/: plc_connection_lib.cpp  plc_connection_node.cpp
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/src/launch/: launch.py
src/robot_description/src/urdf/: Floribot.urdf.xacro
